--- a/client/hackunt/package.json
+++ b/client/hackunt/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "d3": "^7.9.0",
     "dotenv": "^16.4.5",
+    "http-proxy-middleware": "^3.0.3",
     "mongodb": "^6.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -19,6 +21,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/d3": "^7.4.3",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
