--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "express": "^4.21.1",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.3",
+    "mysql": "^2.18.1",
     "nodemon": "^3.1.7"
   }
 }
