--- a/client/hackunt/package.json
+++ b/client/hackunt/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "axios": "^1.7.7",
     "d3": "^7.9.0",
     "dotenv": "^16.4.5",
     "http-proxy-middleware": "^3.0.3",
