--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,12 @@
-services: #setup docker secrets sometime
+services:
   app:
     image: node:14
     working_dir: /usr/src/app
     volumes:
-      - .:/usr/src/app
-    build: .
+      - ./server:/usr/src/app
+    build:
+      context: ./server
+      dockerfile: Dockerfile
     environment:
       DB_HOST: mysql_server
       DB_PORT: 3306
@@ -18,11 +20,11 @@ services: #setup docker secrets sometime
     depends_on:
       mysql_server:
         condition: service_healthy
-  
+
   mysql_server:
     image: mysql:8.0
     environment:
-      MYSQL_DATABASE: unthack
+      MYSQL_DATABASE: socialMedia
       MYSQL_USER: ${DB_USER}
       MYSQL_PASSWORD: ${DB_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD} #root password for me is same as user password
@@ -30,13 +32,16 @@ services: #setup docker secrets sometime
       - "3307:3306"
     command: --default-authentication-plugin=mysql_native_password
     healthcheck:
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       interval: 1s
       timeout: 3s
       retries: 30
 
   frontend:
     build:
-      context: ./client/hackunt
+      context: ./client
+      dockerfile: Dockerfile
     ports:
-      - "8080:8080" # http://192.168.113.3:8080/
+      - "8080:8080" # http://172.168.113.3:8080/
+    environment:
+     - NODE_ENV=production
