--- a/client/package.json
+++ b/client/package.json
@@ -3,19 +3,20 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://cmac2112.github.io/hackunt",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "vite build",
+    "serve": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
     "axios": "^1.7.7",
     "d3": "^7.9.0",
     "dotenv": "^16.4.5",
-    "http-proxy-middleware": "^3.0.3",
-    "mongodb": "^6.10.0",
+    "gh-pages": "^6.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
